--- a/index.html
+++ b/index.html
@@ -40,14 +40,15 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        Ajit 
+                        <span class="text-primary">Kumar</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        TF 2, Sirinivasam Apartment, Mithilapuri Colony,
+                            Madhurwada, Vishakhapatnam, Andhra Pradesh - 530045
+                        <a href="mailto:ajitkmr36@gmail.com">ajitkmr36@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">Resourceful System Administrator consistently responds to wide range of technical challenges with focused and creative approach. Highly effective at problem solving and decision making. 9 Years of progressive IT experience. </p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
